[BE] FIX: 캐릭터 목록 반환 시 롤 없는 캐릭터도 반환